[package]
name = "alltrailsgpx"
version = "0.2.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Get GPX files from Alltrails"
repository = "https://github.com/cdown/alltrailsgpx"
readme = "README.md"
keywords = ["gpx", "hiking", "alltrails"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.81"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["deref"] }
geo-types = "0.7.17"
gpx = "0.10.0"
polyline = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[lib]
name = "alltrailsgpx"
path = "src/lib.rs"

[[bin]]
name = "alltrailsgpx"
path = "src/main.rs"
